# Arcade

./: .gitignore  CMakeLists.txt  Makefile  build.sh
.github/workflows/: mirroring.yml
src/: main.cpp
src/common/: Event.hpp  IObject.hpp  Input.hpp  Object.hpp  Position.hpp  obj.txt
src/core/: Core.cpp  Core.hpp  LibHandler.cpp  LibHandler.hpp  Menu.cpp  Menu.hpp
src/display/: IDisplay.hpp  tkt.txt
src/errors/: ErrorHandler.cpp  ErrorHandler.hpp
src/game/: IGame.hpp  Makefile
src/game/nibbler/: CMakeLists.txt  nibbler.cpp  nibbler.hpp
src/game/snake/: CMakeLists.txt  snake.cpp  snake.hpp
src/game/template/: CMakeLists.txt  template.cpp  template.hpp
src/librairies/ncurses/: CMakeLists.txt  ncurses.cpp  ncurses.hpp
src/librairies/sdl/: CMakeLists.txt  sdl.cpp  sdl.hpp
src/librairies/sfml/: CMakeLists.txt  sfml.cpp  sfml.hpp
src/librairies/snake/: snake.hpp
src/libraries/ncurses/: CMakeLists.txt  ncurses.cpp  ncurses.hpp
src/libraries/sdl/: sdl.cpp
src/libraries/sfml/: CMakeLists.txt  sfml.cpp  sfml.hpp
src/object/: IObject.hpp
